@@ -1,15 +1,19 @@
-abstract: Regular Expression engine API
-author: "\xC3\x86var Arnfj\xC3\xB6r\xC3\xB0 Bjarmason <avar@cpan.org>"
-build_requires: 
+---
+abstract: API to write custom regex engines
+author: 'Ævar Arnfjörð Bjarmason <avar@cpan.org>'
+build_requires:
   Test::More: 0
 distribution_type: module
-generated_by: Module::Install version 0.64
+generated_by: Module::Install version 0.65
 license: perl
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.3.html
+  version: 1.3
 name: re-engine-Plugin
-no_index: 
-  directory: 
+no_index:
+  directory:
     - inc
     - t
-requires: 
+requires:
   perl: 5.9.5
-tests: t/*.t
+tests: t/*.t t/*/*.t t/*/*/*.t
